Add list and get time record status routes
