# src/apps/api/docs/swagger.yaml
@@ -361,6 +361,13 @@ definitions:
       student_id:
         type: string
     type: object
+  response.TimeRecordStatus:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+    type: object
 info:
   contact:
     email: wmrn1@aluno.ifal.edu.br
@@ -1947,6 +1954,68 @@ paths:
       summary: Atualizar informações de um estudante.
       tags:
       - Estudantes
+  /time-record-status:
+    get:
+      description: Recupera uma lista de todos os status ou filtra por nome.
+      operationId: TimeRecordStatus.List
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Requisição realizada com sucesso.
+          schema:
+            items:
+              $ref: '#/definitions/response.TimeRecordStatus'
+            type: array
+        "400":
+          description: Requisição mal formulada.
+          schema:
+            $ref: '#/definitions/response.ErrorMessage'
+        "500":
+          description: Ocorreu um erro inesperado. Por favor, contate o suporte.
+          schema:
+            $ref: '#/definitions/response.ErrorMessage'
+      security:
+      - BearerAuth: []
+      summary: Listar status de registro de tempo.
+      tags:
+      - Status de Registro de Tempo
+  /time-record-status/{id}:
+    get:
+      description: Recupera os detalhes de um status de registro de tempo específico
+        por ID.
+      operationId: TimeRecordStatus.Get
+      parameters:
+      - default: 52613242-6b50-490a-9b4c-90cc3f263e9a
+        description: ID do status de registro de tempo
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Requisição realizada com sucesso.
+          schema:
+            $ref: '#/definitions/response.TimeRecordStatus'
+        "400":
+          description: Requisição mal formulada.
+          schema:
+            $ref: '#/definitions/response.ErrorMessage'
+        "404":
+          description: Recurso não encontrado.
+          schema:
+            $ref: '#/definitions/response.ErrorMessage'
+        "500":
+          description: Ocorreu um erro inesperado. Por favor, contate o suporte.
+          schema:
+            $ref: '#/definitions/response.ErrorMessage'
+      security:
+      - BearerAuth: []
+      summary: Obtenha um status de registro de tempo por ID.
+      tags:
+      - Status de Registro de Tempo
   /time-records:
     get:
       description: Recupera uma lista de todos os registros de tempo no sistema.
